Remove cdn for icons

--- a/desktop.html
+++ b/desktop.html
@@ -461,12 +461,12 @@
 
     <div id="desktop">
       <div class="icon selectable" data-app="explorer">
-        <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png" />
+        <img src="/icons/file.png" />
         <div>Computer</div>
       </div>
 
       <div class="icon selectable" data-app="notepad">
-        <img src="https://cdn-icons-png.flaticon.com/512/32/32329.png" />
+        <img src="/icons/notepad.png" />
         <div>Notepad</div>
       </div>
 
