Add pokemon games

--- a/desktop.html
+++ b/desktop.html
@@ -569,6 +569,37 @@
         <div>Fancy Pants 2</div>
       </div>
 
+      <div class="icon selectable" data-app="jojo">
+        <img src="/icons/jojo.gif" />
+        <div>JJBA Heritage For The Future</div>
+      </div>
+
+      <div class="icon selectable" data-app="pokemonRed">
+        <img src="/icons/pokemonred.png" />
+        <div>Pokemon</div>
+      </div>
+
+      <div class="icon selectable" data-app="pokemonEmerald">
+        <img src="/icons/pokemonemerald.png" />
+        <div>Pokemon Emerald</div>
+      </div>
+      <div class="icon selectable" data-app="pokemonRuby">
+        <img src="/icons/pokemonruby.jpg" />
+        <div>Pokemon Ruby</div>
+      </div>
+      <div class="icon selectable" data-app="pokemonPlatinum">
+        <img src="/icons/pokemonplatinum.jpg" />
+        <div>Pokemon Platinum</div>
+      </div>
+      <div class="icon selectable" data-app="pokemonSapphire">
+        <img src="/icons/pokemonsapphire.jpg" />
+        <div>Pokemon Sapphire</div>
+      </div>
+      <div class="icon selectable" data-app="pokemonDark">
+        <img src="/icons/pokemondark.jpg" />
+        <div>Pokemon Dark</div>
+      </div>
+
       <div class="icon selectable" data-app="vscode">
         <img src="/icons/code.ico" />
         <div>Visual Studio Code</div>
