Import pokemon games / emu js

--- a/desktop.html
+++ b/desktop.html
@@ -453,6 +453,9 @@
         background: #3daee9;
         color: black;
       }
+      .ejs_canvas {
+        height: 90% !important;
+      }
     </style>
   </head>
 
@@ -508,11 +511,6 @@
       <div class="icon selectable" data-app="roads">
         <img src="/icons/roads.svg" />
         <div>Roads</div>
-      </div>
-
-      <div class="icon selectable" data-app="starcraft">
-        <img src="/icons/starcraft.png" />
-        <div>Starcraft</div>
       </div>
 
       <div class="icon selectable" data-app="isaac">
@@ -576,7 +574,7 @@
 
       <div class="icon selectable" data-app="pokemonRed">
         <img src="/icons/pokemonred.png" />
-        <div>Pokemon</div>
+        <div>Pokemon Red</div>
       </div>
 
       <div class="icon selectable" data-app="pokemonEmerald">
@@ -594,10 +592,6 @@
       <div class="icon selectable" data-app="pokemonSapphire">
         <img src="/icons/pokemonsapphire.jpg" />
         <div>Pokemon Sapphire</div>
-      </div>
-      <div class="icon selectable" data-app="pokemonDark">
-        <img src="/icons/pokemondark.jpg" />
-        <div>Pokemon Dark</div>
       </div>
 
       <div class="icon selectable" data-app="vscode">
@@ -645,7 +639,6 @@
           <div class="kde-item" data-app="pacman">👾 Pac-Man</div>
           <div class="kde-item" data-app="pvz">🌻 Plants vs Zombies</div>
           <div class="kde-item" data-app="sonic">🌀 Sonic</div>
-          <div class="kde-item" data-app="starcraft">🚀 StarCraft</div>
         </div>
 
         <div class="kde-page" data-page="system">
