Fix ruffle urls

--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -209,7 +209,7 @@
   </body>
 
   <script type="module" src="/src/main.js"></script>
-  <script src="https://reeyuki.github.io/static/ruffle.js"></script>
+  <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
   <script>
     const icons = desktop.querySelectorAll(".icon");
 
