Move icons to /static and improve neofetch

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       body {
         background-color: black;
         color: white;
-        cursor: url("/icons/cursor.png"), auto;
+        cursor: url("/static/icons/cursor.png"), auto;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -132,7 +132,7 @@
       <img src="/static/astolfo.jpg" />
       <img src="/static/astolfo2.jpg" />
 
-      <div class="trick" id="rickroll-button">Femboy Thighs</div>
+      <div class="trick" id="rickroll-button">Femboy Thighs Gallery</div>
       <div class="popup" id="rickroll-popup">
         <video controls autoplay>
           <source src="https://dn721809.ca.archive.org/0/items/youtube-xvFZjo5PgG0/xvFZjo5PgG0.mp4" type="video/mp4" />
