--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
         color: white;
         margin: 0;
         padding: 0;
-        cursor: url("/icons/cursor.png");
+        cursor: url("/static/icons/cursor.png");
       }
       header {
         text-align: center;
