--- a/static/vciframe.html
+++ b/static/vciframe.html
@@ -511,6 +511,16 @@
             font-size: 0.7em;
             margin-top: 2px;
         }
+        #maximize-btn {
+            z-index: 1;
+            width: 25px;
+            height: 25px;
+            right: 10px;
+            color: #fff;
+            background-color: #555;
+            top: 0px;
+            position: absolute;
+        }
     </style>
 </head>
 
@@ -599,6 +609,7 @@
 
 
     <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
+    <button id="maximize-btn" onclick="maximizeFullscreen()">□</button>
 
     <div class="touch-controls-wrapper">
         <div id="move"></div>
@@ -627,6 +638,28 @@
     <script type='text/javascript' src="jsdos-cloud-sdk.js"></script>
     <script type='text/javascript' src="idbfs.js"></script>
     <script type='text/javascript' src="game.js"></script>
+    <script>
+    function maximizeFullscreen() {
+        if (document.fullscreenElement) {
+            document.exitFullscreen().catch(err => console.error("Failed to exit fullscreen:", err));
+        } else {
+            document.documentElement.requestFullscreen()
+                .then(() => console.log("Entered fullscreen"))
+                .catch(err => console.error("Failed to enter fullscreen:", err));
+        }
+    }
+
+    document.addEventListener("fullscreenchange", () => {
+        const maximizeBtn = document.getElementById("maximize-btn")
+        if (document.fullscreenElement) {
+            maximizeBtn.style.display = "none";
+        } else {
+            maximizeBtn.style.display = "block";
+        }
+    });
+
+
+    </script>
 
 </body>
 
