Add flight game

--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -204,6 +204,11 @@
         <img src="/static/icons/swordsandsouls.webp" />
         <div>Swords And Souls</div>
       </div>
+
+      <div class="icon selectable" data-app="flight">
+        <img src="/static/icons/flight.webp" />
+        <div>Flight</div>
+      </div>
     </div>
     <div id="start-menu" class="kde-menu">
       <div class="kde-sidebar">
