--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -311,6 +311,11 @@
         <img src="/static/icons/obama.jpg" />
         <div>Obama Alien Defense</div>
       </div>
+
+      <div class="icon selectable" data-app="fnaf">
+        <img src="/static/games/fnaf/fnaf1.webp" />
+        <div>Fnaf</div>
+      </div>
     </div>
     <div id="start-menu" class="kde-menu">
       <div class="kde-sidebar">
