--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reeyuki Desktop</title>
+    <title>Yuki OS</title>
     <link href="/src/style.css" rel="stylesheet" />
   </head>
 
@@ -19,6 +19,11 @@
       <div class="icon selectable" data-app="notepad">
         <img src="/static/icons/notepad.webp" />
         <div>Notepad</div>
+      </div>
+
+      <div class="icon selectable" data-app="browser">
+        <img src="/static/icons/chromium.webp" />
+        <div>Browser</div>
       </div>
 
       <div class="icon selectable" data-app="paint">
@@ -315,6 +320,39 @@
       <div class="icon selectable" data-app="fnaf">
         <img src="/static/games/fnaf/fnaf1.webp" />
         <div>Fnaf</div>
+      </div>
+
+      <div class="icon selectable" data-app="geometryDash">
+        <img src="/static/icons/geometryDash.png" />
+        <div>Geometry Dash</div>
+      </div>
+
+      <div class="icon selectable" data-app="cutTheRope">
+        <img src="/static/icons/ctr2.png" />
+        <div>Cut The Rope 2</div>
+      </div>
+
+      <div class="icon selectable" data-app="game2048">
+        <img src="/static/icons/2048.png" />
+        <div>2048</div>
+      </div>
+
+      <div class="icon selectable" data-app="pinball">
+        <img src="/static/icons/pinball.png" />
+        <div>Pinball</div>
+      </div>
+
+      <div class="icon selectable" data-app="flappyBird">
+        <img src="/static/icons/flappy.png" />
+        <div>Flappy Bird</div>
+      </div>
+      <div class="icon selectable" data-app="happyWheels">
+        <img src="/static/icons/happyWheels.png" />
+        <div>Happy Wheels</div>
+      </div>
+      <div class="icon selectable" data-app="jetpack">
+        <img src="/static/icons/jetpack.png" />
+        <div>Jetpack Joyride</div>
       </div>
     </div>
     <div id="start-menu" class="kde-menu">
