--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -223,6 +223,11 @@
         <div>Pokemon White</div>
       </div>
 
+      <div class="icon selectable" data-app="pokemonWhite2">
+        <img src="/static/icons/pokemonwhite.jpg" />
+        <div>Pokemon White</div>
+      </div>
+
       <div class="icon selectable" data-app="gtaVc">
         <img src="/static/icons/gtavc.png" />
         <div>GTA Vice City</div>
