Add desmume/melonds files

--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -225,7 +225,7 @@
 
       <div class="icon selectable" data-app="pokemonWhite2">
         <img src="/static/icons/pokemonwhite.jpg" />
-        <div>Pokemon White</div>
+        <div>Pokemon White 2</div>
       </div>
 
       <div class="icon selectable" data-app="gtaVc">
