Add incredibles, avatar and epicbossfighter

--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -357,17 +357,32 @@
         <img src="/static/icons/flappy.png" />
         <div>Flappy Bird</div>
       </div>
+
       <div class="icon selectable" data-app="happyWheels">
         <img src="/static/icons/happyWheels.png" />
         <div>Happy Wheels</div>
       </div>
+
       <div class="icon selectable" data-app="jetpack">
         <img src="/static/icons/jetpack.png" />
         <div>Jetpack Joyride</div>
       </div>
+
       <div class="icon selectable" data-app="superrobotwar">
         <img src="/static/icons/superrobotwar.jpg" />
         <div>Super Robot War</div>
+      </div>
+      <div class="icon selectable" data-app="epicbossfighter2">
+        <img src="/static/icons/epicbossfighter2.png" />
+        <div>Epic Boss Fighter 2</div>
+      </div>
+      <div class="icon selectable" data-app="avatarFortressFight2">
+        <img src="/static/icons/avatarFortressFight.webp" />
+        <div>Avatar Fortress Fight 2</div>
+      </div>
+      <div class="icon selectable" data-app="incredibles">
+        <img src="/static/icons/incredibles.webp" />
+        <div>Incredibles</div>
       </div>
     </div>
     <div id="start-menu" class="kde-menu">
