Improve window controls / Switch to browserfs

--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -468,6 +468,9 @@
         background: transparent !important;
         color: rgba(255, 255, 255, 0.9);
       }
+      .window-controls button:hover {
+        background: #0000005c !important;
+      }
     </style>
   </body>
 </html>
