Add games from truffle

--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -65,7 +65,10 @@
         <img src="/static/icons/pvz.webp" />
         <div>Plants vs. Zombies</div>
       </div>
-
+      <div class="icon selectable" data-app="pvz2">
+        <img src="/static/icons/pvz2.webp" />
+        <div>Plants vs. Zombies 2</div>
+      </div>
       <div class="icon selectable" data-app="pvzHybrid">
         <img src="/static/icons/pvzhybrid.webp" />
         <div>PVZ Hybrid</div>
@@ -119,6 +122,12 @@
         <img src="/static/icons/baloonstd5.webp" />
         <div>Baloons TD 5</div>
       </div>
+
+      <div class="icon selectable" data-app="baloonsTd6">
+        <img src="/static/icons/baloonstd6.webp" />
+        <div>Baloons TD 6</div>
+      </div>
+
       <div class="icon selectable" data-app="trinitas">
         <img src="/static/icons/trinitas.jpg" />
         <div>Trinitas</div>
@@ -387,6 +396,71 @@
       <div class="icon selectable" data-app="fistPunch">
         <img src="/static/icons/fistpunch.png" />
         <div>Regular Show FP</div>
+      </div>
+
+      <div class="icon selectable" data-app="hollowKnight">
+        <img src="/static/icons/hollowKnight.webp" />
+        <div>Hollow Knight</div>
+      </div>
+
+      <div class="icon selectable" data-app="slimeRancher">
+        <img src="/static/icons/slime.webp" />
+        <div>Slime Rancher</div>
+      </div>
+
+      <div class="icon selectable" data-app="kindergarten">
+        <img src="/static/icons/kind1.webp" />
+        <div>Kindergarten</div>
+      </div>
+
+      <div class="icon selectable" data-app="kindergarten2">
+        <img src="/static/icons/kind2.webp" />
+        <div>Kindergarten 2</div>
+      </div>
+
+      <div class="icon selectable" data-app="cuphead">
+        <img src="/static/icons/cup.webp" />
+        <div>Cuphead</div>
+      </div>
+
+      <div class="icon selectable" data-app="raft">
+        <img src="/static/icons/raft.webp" />
+        <div>Raft</div>
+      </div>
+
+      <div class="icon selectable" data-app="celeste">
+        <img src="/static/icons/celeste.webp" />
+        <div>Celeste</div>
+      </div>
+
+      <div class="icon selectable" data-app="terraria">
+        <img src="/static/icons/ter.webp" />
+        <div>Terraria</div>
+      </div>
+
+      <div class="icon selectable" data-app="yandereSim">
+        <img src="/static/icons/yandere.webp" />
+        <div>Yandere Simulator</div>
+      </div>
+
+      <div class="icon selectable" data-app="undertale">
+        <img src="/static/icons/undertale.webp" />
+        <div>Undertale Sans Fight</div>
+      </div>
+
+      <div class="icon selectable" data-app="balatro">
+        <img src="/static/icons/bal.webp" />
+        <div>Balatro</div>
+      </div>
+
+      <div class="icon selectable" data-app="granny">
+        <img src="/static/icons/granny.webp" />
+        <div>Granny</div>
+      </div>
+
+      <div class="icon selectable" data-app="bendy">
+        <img src="/static/icons/bendy.webp" />
+        <div>Bendy and the Ink Machine</div>
       </div>
     </div>
     <div id="start-menu" class="kde-menu">
