Add savage pursuit

--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -466,6 +466,11 @@
         <img src="/static/icons/undertale.webp" />
         <div>Undertale Sans Fight</div>
       </div>
+
+      <div class="icon selectable" data-app="savagePursuit">
+        <img src="/static/icons/savage.jpg" />
+        <div>Savage Pursuit</div>
+      </div>
     </div>
 
     <div id="start-menu" class="kde-menu">
