Add omori repo ultrakill

--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -117,6 +117,19 @@
         <div>Bendy and the Ink Machine</div>
       </div>
 
+      <div class="icon selectable popular" data-app="omori">
+        <img src="/static/icons/omori.webp" />
+        <div>Omori</div>
+      </div>
+      <div class="icon selectable popular" data-app="ultrakill">
+        <img src="/static/icons/ultrakill.webp" />
+        <div>Ultrakill</div>
+      </div>
+      <div class="icon selectable popular" data-app="repo">
+        <img src="/static/icons/repo.png" />
+        <div>Repo</div>
+      </div>
+
       <div class="icon selectable popular" data-app="kindergarten">
         <img src="/static/icons/kind1.webp" />
         <div>Kindergarten</div>
