--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -106,6 +106,11 @@
         <div>Cuphead</div>
       </div>
 
+      <div class="icon selectable popular" data-app="vampireSurvivors">
+        <img src="/static/icons/vampireSurvivors.webp" />
+        <div>Vampire Survivors</div>
+      </div>
+
       <div class="icon selectable popular" data-app="raft">
         <img src="/static/icons/raft.webp" />
         <div>Raft</div>
