Add 8 new games

--- a/static/games/fnaf/index.html
+++ b/static/games/fnaf/index.html
@@ -53,7 +53,7 @@
         <img src="/static/icons/fnaf4.webp" />
       </a>
       <a href="https://fnafgame.io/five-nights-at-freddys-sister-location">
-        <img src="/static/icons/fnaf-sl.jpg" />
+        <img src="/static/icons/fnaf-sl.webp" />
       </a>
       <a href="https://www.gameflare.com/embed/ultimate-custom-night">
         <img src="/static/icons/fnafucn.webp" />
