--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -73,7 +73,7 @@
       </div>
 
       <div class="icon selectable" data-app="cameraApp">
-        <img src="/static/icons/camera.svg" />
+        <img src="/static/icons/cam.webp" />
         <div>Camera</div>
       </div>
 
@@ -199,12 +199,37 @@
         <div>Tattletail</div>
       </div>
 
-      <div class="icon selectable" data-app="baldi">
+      <div class="icon selectable popular" data-app="baldi">
         <img src="/static/icons/baldi.webp" />
         <div>Baldi's Basics</div>
       </div>
 
-      <div class="icon selectable" data-app="vampireSurvivors">
+      <div class="icon selectable popular" data-app="candyCrush">
+        <img src="/static/icons/candy.webp" />
+        <div>Candy Crush</div>
+      </div>
+
+      <div class="icon selectable popular" data-app="oneshot">
+        <img src="/static/icons/oneshot.webp" />
+        <div>Oneshot</div>
+      </div>
+
+      <div class="icon selectable popular" data-app="goi">
+        <img src="/static/icons/goi.webp" />
+        <div>Getting Over It</div>
+      </div>
+
+      <div class="icon selectable popular" data-app="milkInside">
+        <img src="/static/icons/inside.webp" />
+        <div>Milk inside a bag of milk</div>
+      </div>
+
+      <div class="icon selectable popular" data-app="milkOutside">
+        <img src="/static/icons/outside.webp" />
+        <div>Milk outside a bag of milk</div>
+      </div>
+
+      <div class="icon selectable popular" data-app="vampireSurvivors">
         <img src="/static/icons/vampireSurvivors.webp" />
         <div>Vampire Survivors</div>
       </div>
