Add many more games

--- a/site.html
+++ b/site.html
@@ -192,9 +192,9 @@
         <h2>My Other Domains</h2>
         <p>Clone of this website in other domains:</p>
         <ul>
-          <li><a href="https://reeyuki.github.io" target="_blank" rel="noopener">GitHub Pages</a></li>
+          <li><a href="https://reeyuki.github.io" target="_blank" >GitHub Pages</a></li>
           <li><a href="https://reeyuki.neocities.org" target="_blank" rel="noopener">Neocities Site</a></li>
-          <li><a href="https://reeyuki.nekoweb.org" target="_blank" rel="noopener">NekoWeb Site</a></li>
+          <li><a href="https://reeyuki.nekoweb.org" target="_blank" >NekoWeb Site</a></li>
         </ul>
       </section>
 
