--- a/static/games/fnaf/index.html
+++ b/static/games/fnaf/index.html
@@ -58,6 +58,9 @@
       <a href="https://www.gameflare.com/embed/ultimate-custom-night">
         <img src="/static/icons/fnafucn.webp" />
       </a>
+      <a href="/static/games/html/fnafWorld.html">
+        <img src="/static/icons/fnafWorld.webp" />
+      </a>
       <a href="https://games.crazygames.com/en_US/fnaf-shooter/index.html?isNewUser=false&v=1.348">
         <img src="/static/icons/fnafshooter.webp" />
       </a>
