--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -91,156 +91,162 @@
         <div>Browser</div>
       </div>
 
-      <div class="icon selectable popular" data-app="flash">
+      <div class="icon selectable" data-app="flash">
         <img src="/static/icons/flash.webp" />
         <div>Flash Games</div>
       </div>
 
-      <div class="icon selectable popular" data-app="pokemon">
+      <div class="icon selectable" data-app="pokemon">
         <img src="/static/icons/pokeball.webp" />
         <div>Pokemon Games</div>
       </div>
 
-      <div class="icon selectable popular" data-app="cuphead">
+      <div class="icon selectable" data-app="cuphead">
         <img src="/static/icons/cup.webp" />
         <div>Cuphead</div>
       </div>
 
-      <div class="icon selectable popular" data-app="raft">
+      <div class="icon selectable" data-app="raft">
         <img src="/static/icons/raft.webp" />
         <div>Raft</div>
       </div>
 
-      <div class="icon selectable popular" data-app="celeste">
+      <div class="icon selectable" data-app="celeste">
         <img src="/static/icons/celeste.webp" />
         <div>Celeste</div>
       </div>
 
-      <div class="icon selectable popular" data-app="terraria">
+      <div class="icon selectable" data-app="terraria">
         <img src="/static/icons/ter.webp" />
         <div>Terraria</div>
       </div>
 
-      <div class="icon selectable popular" data-app="yandereSim">
+      <div class="icon selectable" data-app="yandereSim">
         <img src="/static/icons/yandere.webp" />
         <div>Yandere Simulator</div>
       </div>
 
-      <div class="icon selectable popular" data-app="isaac">
+      <div class="icon selectable" data-app="isaac">
         <img src="/static/icons/isaac.webp" />
         <div>Isaac</div>
       </div>
-      <div class="icon selectable popular" data-app="gtaVc">
+
+      <div class="icon selectable" data-app="isaacRebirth">
+        <img src="/static/icons/isaac.webp" />
+        <div>Isaac Rebirth</div>
+      </div>
+
+      <div class="icon selectable" data-app="gtaVc">
         <img src="/static/icons/gtavc.webp" />
         <div>GTA Vice City</div>
       </div>
 
-      <div class="icon selectable popular" data-app="subwaySurfers">
+      <div class="icon selectable" data-app="subwaySurfers">
         <img src="/static/icons/subway.webp" />
         <div>Subway Surfers</div>
       </div>
 
-      <div class="icon selectable popular" data-app="minecraft">
+      <div class="icon selectable" data-app="minecraft">
         <img src="/static/icons/minecraft.webp" />
         <div>Minecraft</div>
       </div>
 
-      <div class="icon selectable popular" data-app="hollowKnight">
+      <div class="icon selectable" data-app="hollowKnight">
         <img src="/static/icons/hollowKnight.webp" />
         <div>Hollow Knight</div>
       </div>
 
-      <div class="icon selectable popular" data-app="slimeRancher">
+      <div class="icon selectable" data-app="slimeRancher">
         <img src="/static/icons/slime.webp" />
         <div>Slime Rancher</div>
       </div>
 
-      <div class="icon selectable popular" data-app="balatro">
+      <div class="icon selectable" data-app="balatro">
         <img src="/static/icons/bal.webp" />
         <div>Balatro</div>
       </div>
 
-      <div class="icon selectable popular" data-app="bendy">
+      <div class="icon selectable" data-app="bendy">
         <img src="/static/icons/bendy.webp" />
         <div>Bendy and the Ink Machine</div>
       </div>
 
-      <div class="icon selectable popular" data-app="omori">
+      <div class="icon selectable" data-app="omori">
         <img src="/static/icons/omori.webp" />
         <div>Omori</div>
       </div>
-      <div class="icon selectable popular" data-app="ultrakill">
+      <div class="icon selectable" data-app="ultrakill">
         <img src="/static/icons/ultrakill.webp" />
         <div>Ultrakill</div>
       </div>
-      <div class="icon selectable popular" data-app="repo">
+      <div class="icon selectable" data-app="repo">
         <img src="/static/icons/repo.webp" />
         <div>Repo</div>
       </div>
 
-      <div class="icon selectable popular" data-app="kindergarten">
+      <div class="icon selectable " data-app="kindergarten">
         <img src="/static/icons/kind1.webp" />
         <div>Kindergarten</div>
       </div>
 
-      <div class="icon selectable popular" data-app="kindergarten2">
+      <div class="icon selectable" data-app="kindergarten2">
         <img src="/static/icons/kind2.webp" />
         <div>Kindergarten 2</div>
       </div>
 
-      <div class="icon selectable popular" data-app="tattletail">
+      <div class="icon selectable" data-app="tattletail">
         <img src="/static/icons/tat.webp" />
         <div>Tattletail</div>
       </div>
 
-      <div class="icon selectable popular" data-app="baldi">
+      <div class="icon selectable" data-app="baldi">
         <img src="/static/icons/baldi.webp" />
         <div>Baldi's Basics</div>
       </div>
 
-      <div class="icon selectable popular" data-app="candyCrush">
+      <div class="icon selectable" data-app="candyCrush">
         <img src="/static/icons/candy.webp" />
         <div>Candy Crush</div>
       </div>
 
-      <div class="icon selectable popular" data-app="oneshot">
+      <div class="icon selectable" data-app="oneshot">
         <img src="/static/icons/oneshot.webp" />
         <div>Oneshot</div>
       </div>
 
-      <div class="icon selectable popular" data-app="goi">
+      <div class="icon selectable" data-app="goi">
         <img src="/static/icons/goi.webp" />
         <div>Getting Over It</div>
       </div>
 
-      <div class="icon selectable popular" data-app="shark">
+      <div class="icon selectable" data-app="shark">
         <img src="/static/icons/shark.webp" />
         <div>Crazy Shark</div>
       </div>
 
-      <div class="icon selectable popular" data-app="fnaf">
+      <div class="icon selectable" data-app="fnaf">
         <img src="/static/icons/fnaf1.webp" />
         <div>FNAF [1-7]</div>
       </div>
 
-      <div class="icon selectable popular" data-app="geometryDash">
+      <div class="icon selectable" data-app="geometryDash">
         <img src="/static/icons/geometryDash.webp" />
         <div>Geometry Dash</div>
       </div>
 
-      <div class="icon selectable popular" data-app="jetpack">
+      <div class="icon selectable" data-app="jetpack">
         <img src="/static/icons/jetpack.webp" />
         <div>Jetpack Joyride</div>
       </div>
 
-      <div class="icon selectable popular" data-app="undertaleYellow">
+      <div class="icon selectable" data-app="undertaleYellow">
         <img src="/static/icons/yellow.webp" />
         <div>Undertale Yellow</div>
       </div>
 
-      <div class="icon selectable popular" data-app="deltraveler">
-        <img src="/static/icons/deltraveler.webp" />
-        <div>Deltraveler</div>
+      <div class="icon selectable popular" data-app="deltarune">
+        <img src="/static/icons/deltarune.png" />
+        <div>Deltarune</div>
       </div>
 
       <div class="icon selectable popular" data-app="milkInside">
@@ -256,6 +262,26 @@
       <div class="icon selectable popular" data-app="vampireSurvivors">
         <img src="/static/icons/vampireSurvivors.webp" />
         <div>Vampire Survivors</div>
+      </div>
+
+      <div class="icon selectable popular" data-app="halfLife">
+        <img src="/static/icons/half.webp" />
+        <div>Half Life</div>
+      </div>
+
+      <div class="icon selectable popular" data-app="angryBirdsSpace">
+        <img src="/static/icons/angryBirdsSpace.webp" />
+        <div>Angry Birds Space</div>
+      </div>
+      
+      <div class="icon selectable popular" data-app="doodle">
+        <img src="/static/icons/doodle.webp" />
+        <div>Doodle Halloween Cat</div>
+      </div>
+
+      <div class="icon selectable popular" data-app="cs">
+        <img src="/static/icons/cs.webp" />
+        <div>Cs</div>
       </div>
 
       <div class="icon selectable" data-app="terminal">
