--- a/static/games/html/isaacRebirth.html
+++ b/static/games/html/isaacRebirth.html
@@ -27,7 +27,7 @@ html, body {
     EJS_core = "psp"; // or "ppsspp"
 
     // Your PSP ISO or CSO
-    EJS_gameUrl = "tboirpsp0301.iso";
+    EJS_gameUrl = "/static/games/pokemon/tboirpsp0301.iso";
 
     // EmulatorJS data path
     EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
