--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -101,7 +101,7 @@
         <div>Pokemon Games</div>
       </div>
 
-      <div class="icon selectable" data-app="cuphead">
+      <div class="icon selectable popular" data-app="cuphead">
         <img src="/static/icons/cup.webp" />
         <div>Cuphead</div>
       </div>
@@ -131,7 +131,7 @@
         <div>Isaac</div>
       </div>
 
-      <div class="icon selectable" data-app="isaacRebirth">
+      <div class="icon selectable popular" data-app="isaacRebirth">
         <img src="/static/icons/isaac.webp" />
         <div>Isaac Rebirth</div>
       </div>
@@ -151,7 +151,7 @@
         <div>Minecraft</div>
       </div>
 
-      <div class="icon selectable" data-app="hollowKnight">
+      <div class="icon selectable popular" data-app="hollowKnight">
         <img src="/static/icons/hollowKnight.webp" />
         <div>Hollow Knight</div>
       </div>
@@ -279,7 +279,12 @@
         <div>Doodle Halloween Cat</div>
       </div>
 
-      <div class="icon selectable popular" data-app="cs">
+      <div class="icon selectable popular" data-app="nso">
+        <img src="/static/icons/nso.webp" />
+        <div>Needy Streamer Overload</div>
+      </div>
+
+      <div class="icon selectable" data-app="cs">
         <img src="/static/icons/cs.webp" />
         <div>Cs</div>
       </div>
